# stopwatch

./: LICENSE  README.md  pyproject.toml
stopwatch/: __init__.py  timer.py
tests/: test.py
